--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,7 @@ ddtrace==4.1.1
 requests==2.32.4
 python-dotenv==1.2.1
 pydantic==2.12.5
+kafka-python==2.3.0
+psycopg2-binary==2.9.11
+six==1.17.0
+supabase == 2.27.0
